[package]
name = "gts"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "validate"
path = "src/validate.rs"
